Fix 16 bugs from code review, clean up unused imports, add README
Bug fixes across 16 files identified during comprehensive code review:

HIGH priority:
- transcribe.py: fix timestamp conversion (centiseconds vs milliseconds),
  remove unused WordTimestamp import, preserve exception chains
- embed.py: fix duplicate sentence offset bug by tracking cumulative
  character offsets instead of using str.find()
- generate.py: add missing Path import at module level, remove redundant
  inner Path imports, preserve exception chains
- qa.py: add cosine metric to get_or_create_collection, cache
  SentenceTransformer model across queries, preserve exception chains
- runner.py: mark current pipeline stage as FAILED on exception
- library.py: clean up ChromaDB chunks when deleting a video
- download.py: use Path.replace() instead of Path.rename() for Windows
  compatibility (target may already exist)
- Dockerfile: add missing COPY poetry.lock for reproducible builds

MEDIUM priority:
- validators.py: catch subprocess.TimeoutExpired in get_video_duration
- config.py: use runtime path resolution for bundled config.default.yaml
  to work correctly when installed as a package
- cli.py: remove -h short flag on serve --host (conflicts with --help),
  remove unused sys and Path imports
- routes.py: handle None filename on UploadFile, validate whisper_model
  enum, forward output_format to pipeline runner
- tasks.py: add threading.Lock for thread-safe job dict access, accept
  and forward output_format parameter
- app.js: check res.ok in poll loop to prevent silent infinite polling,
  guard against NaN duration display
- markdown.py: escape pipe characters in timestamp table cells
- docker-compose.yml: replace sleep-based ollama startup with health
  check polling loop

Also: remove unused imports across config.py, qa.py, routes.py, and
3 evaluation scripts. Add README.md.

All 166 tests pass.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,12 +10,21 @@ services:
     volumes:
       - ollama_data:/root/.ollama
     restart: unless-stopped
-    # Pull default model on first start
+    # Pull default model on first start, waiting for serve to be ready
     entrypoint: >
       sh -c "ollama serve &
-      sleep 5 &&
+      until curl -sf http://localhost:11434/api/tags > /dev/null 2>&1; do
+        echo 'Waiting for ollama serve to be ready...'
+        sleep 2
+      done &&
       ollama pull llama3.1:8b &&
       wait"
+    healthcheck:
+      test: ["CMD", "curl", "-sf", "http://localhost:11434/api/tags"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 15s
 
   # Deep-Dive Video Note Taker
   notetaker:
