Fix E2E integration issues: streaming LLM, yt-dlp JS runtime, Windows UTF-8, timeout increase
- Switch Ollama calls to streaming mode in generate.py and qa.py to prevent CPU timeout on long LLM generations- Add _get_js_runtime_args() in audio.py to auto-detect Node.js/deno for yt-dlp YouTube extraction (required since yt-dlp 2026+)- Add UTF-8 stdout reconfiguration in cli.py to fix Rich spinner crashes on Windows cp1252 consoles- Increase default LLM timeout from 300s to 900s across config, generate.py, and runner.py- Fix _dict_to_generated_output() to handle summary-as-list and normalize key_points- Relax yt-dlp version constraint to >=2025.0 (allow 2026+ releases)- Update test mocks in test_generate.py and test_qa.py for streaming response format

--- a/config.default.yaml
+++ b/config.default.yaml
@@ -32,7 +32,7 @@ ollama:
   model: "llama3.1:8b"
   temperature: 0.3
   max_tokens: 2048
-  timeout_seconds: 300
+  timeout_seconds: 900  # 15 min — CPU inference is slow
 
 # Stage 5: RAG Q&A
 rag:
