--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ jinja2 = "^3.1.0"
 python-multipart = "^0.0.20"
 pydantic = "^2.0"
 pyyaml = "^6.0"
-yt-dlp = "^2025.0"
+yt-dlp = ">=2025.0"
 chromadb = "^1.0"
 sentence-transformers = "^4.0"
 ollama = "^0.4"
