--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-      start_period: 15s
+      start_period: 30s
 
   # Deep-Dive Video Note Taker
   notetaker:
@@ -38,10 +38,17 @@ services:
       - notetaker_data:/root/.notetaker
       - ./outputs:/app/outputs
     environment:
-      - OLLAMA_BASE_URL=http://ollama:11434
+      - NOTETAKER_OLLAMA_BASE_URL=http://ollama:11434
     depends_on:
-      - ollama
+      ollama:
+        condition: service_healthy
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-sf", "http://localhost:8000/health"]
+      interval: 15s
+      timeout: 5s
+      retries: 3
+      start_period: 15s
 
 volumes:
   ollama_data:
